tests/ui/generic-associated-types/unknown-lifetime-ice-119827.stderr
error[E0391]: cycle detected when finding trait impls of `Foo`
  --> $DIR/unknown-lifetime-ice-119827.rs:1:1
   |
LL | trait Foo {
   | ^^^^^^^^^
   |
note: ...which requires computing type of `<impl at $DIR/unknown-lifetime-ice-119827.rs:8:1: 8:26>`...
  --> $DIR/unknown-lifetime-ice-119827.rs:8:1
   |
LL | impl Foo for Box<dyn Foo> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires finding trait impls of `Foo`, completing the cycle
note: cycle used when checking that `Foo` is well-formed
  --> $DIR/unknown-lifetime-ice-119827.rs:1:1
   |
LL | trait Foo {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
