tests/ui/generic-associated-types/unknown-lifetime-ice-119827.rs
trait Foo {
    //~^ ERROR cycle detected
    type Context<'c>
    where
        Self: 'c;
}

impl Foo for Box<dyn Foo> {}

fn main() {}
